dataset1235/2025-2/2868285114/users/154215138/executions/3649835072_3691284457.log
== SUBMISSION (2025-08-21 16:01:31)
-- CODE: 
n1 = float(input("Digite a primeira nota: "))
n2 = float(input("Digite a segunda nota: "))
n3 = float(input("Digite a terceira nota: "))
n4 = float(input("Digite a quarta nota: "))

media_ponderada = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/10
media_ponderada_arredondamento = round(media_ponderada, 2)
print(media_ponderada_arredondamento)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a primeira nota: Digite a segunda nota: Digite a terceira nota: Digite a quarta nota: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 16:00:21)
-- CODE: 
n1 = float(input("Digite a primeira nota: "))
n2 = float(input("Digite a segunda nota: "))
n3 = float(input("Digite a terceira nota: "))
n4 = float(input("Digite a quarta nota: "))

media_ponderada = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4))/10
media_ponderada_arredondamento = rouond(media_ponderada, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    media_ponderada_arredondamento = rouond(media_ponderada, 2)
                                     ^^^^^^
NameError: name 'rouond' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
